--- a/deployment/qit-admin-www/templates/service.yaml
+++ b/deployment/qit-admin-www/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "qit-admin-www.fullname" . }}
+  name: qit-admin-www
   labels:
-    {{- include "qit-admin-www.labels" . | nindent 4 }}
+    app: qit-admin-client
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
+    - port: 80
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "qit-admin-www.selectorLabels" . | nindent 4 }}
+    app: qit-admin-client
