--- a/deployment/qit-admin-www/templates/deployment.yaml
+++ b/deployment/qit-admin-www/templates/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app: qit-admin-client
 spec:
+  selector:
+    matchLabels:
+      app: qit-admin-client
   template:
     metadata:
       labels:
