adding deployment files for spring

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -87,6 +87,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>net.codingblocks.qit.api.ApiApplication</mainClass>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
